--- a/src/Layout/SideBar/SideBar.css
+++ b/src/Layout/SideBar/SideBar.css
@@ -77,7 +77,7 @@
         top: 10px;
         right: 20px;
     }
-        span {
+    .menu-container-admin .main_Menu .single_Menu .number_SideBar  span {
             background-color: red;
             color: #fff;
             padding: 0px 5px;
