--- a/src/Layout/TopBar/TopBar.css
+++ b/src/Layout/TopBar/TopBar.css
@@ -26,6 +26,11 @@
     position: absolute;
     top: 5px;
     right: 0px;
+    background-color: red;
+    color: #fff;
+    padding: 0px 5px;
+    font-size: 10px;
+    border-radius: 20px;
 }
 
 .topbar .topbar_Right .icon_Utilities .Notification .content_Notification{
