--- a/src/Layout/SideBar/SideBar.css
+++ b/src/Layout/SideBar/SideBar.css
@@ -1,7 +1,7 @@
 .container-admin {
     /* box-shadow: 0px 0px 5px 0px #737373; */
     position: relative;
-
+    width: 100%;
 }
     .menu-container-admin {
         background-color: #fff;
@@ -200,6 +200,7 @@
     @media (max-width: 768px) {
         .container-admin {
             position: fixed;
+            width: 70%;
         }
 
         .nutanhien_menu {
